[gd_scene load_steps=71 format=2]

[ext_resource path="res://Action RPG Resources/Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Action RPG Resources/Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sprites/Enemy/Enemy 12-1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Enemy/Enemy 15-1.png" type="Texture" id=11]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=12]
[ext_resource path="res://assets/sprites/Enemy/Enemy 15-3.png" type="Texture" id=13]
[ext_resource path="res://assets/status_bars/RedBar_0.png" type="Texture" id=14]
[ext_resource path="res://assets/status_bars/BarBackground.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/Enemy/Enemy 04-1.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/Enemy/Enemy 05-1.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/Enemy/Enemy 13-1.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/Enemy/Enemy 14-1.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/Enemy/Enemy 11-1.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/Enemy/Enemy 15-2.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/Enemy/Enemy 01-1.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/Enemy/Enemy 02-1.png" type="Texture" id=23]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Skeleton",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Devil",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "GreenGhost",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Skeletonb",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Ghost",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Enemy1",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "RedGhost",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Monster",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Enemy2",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Devilb",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Monsterb",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 6.48513
height = 7.63127

[sub_resource type="CapsuleShape2D" id=27]
radius = 7.0
height = 8.0014

[sub_resource type="CircleShape2D" id=28]
radius = 60.4621

[sub_resource type="CircleShape2D" id=29]
radius = 4.10309

[sub_resource type="CircleShape2D" id=30]
radius = 5.01096

[sub_resource type="Animation" id=31]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=32]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -5 )
scale = Vector2( 0.68, 0.68 )
frames = SubResource( 25 )
animation = "Enemy1"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.2199 )
shape = SubResource( 26 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 27 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 20

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 28 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4
damage = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -14.819 )
shape = SubResource( 29 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 30 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 31 )
anims/Stop = SubResource( 32 )

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -15.0
margin_top = -35.0
margin_right = 15.0
margin_bottom = -27.0
rect_min_size = Vector2( 30, 8 )
value = 100.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
